Fix gap between paragraphs in the popup by setting padding

--- a/css/wordhighlighter.css
+++ b/css/wordhighlighter.css
@@ -81,6 +81,7 @@
     margin-bottom: 0px !important;
     margin-top: 0px !important;
     line-height: 120% !important;
+    padding: 0 0 0 0 !important;
 }
 
 #word-highlighter-page-stats a {
